add bun exemple

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "bun run --watch src/index.ts",
 		"start-bun": "bun run src/index-bun.ts",
+		"start-hono": "bun run src/index-hono.ts",
 		"start-node": "tsx src/index-node.ts"
 	},
 	"dependencies": {
 		"@ai-sdk/anthropic": "^0.0.51",
 		"@hono/node-server": "^1.13.2",
+		"@types/bun": "^1.1.11",
 		"ai": "^3.4.11",
 		"elysia": "latest",
 		"hono": "^4.6.5"
